feat/ created dropdown and get value for selected currencie

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exchange</title>
-    <script src="index.js"></script>
 </head>
+
 <body>
     <h1>Hello</h1>
+    <label for="exchange">Choose a currencies:</label>
+    <select name="exchange" id="exchange">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="AUD">AUD</option>
+        <option value="CAD">CAD</option>
+        <option value="CHF">CHF</option>
+        <option value="NZD">NZD</option>
+        <option value="BGN">BGN</option>
+    </select>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
